--- a/Presentation/ETicaretAPI.API/ETicaretAPI.API.csproj
+++ b/Presentation/ETicaretAPI.API/ETicaretAPI.API.csproj
@@ -25,4 +25,9 @@
     <ProjectReference Include="..\..\Infrastructure\ETicaretAPI.Persistance\ETicaretAPI.Persistance.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\resource\product-images\" />
+  </ItemGroup>
+
 </Project>
