--- a/Infrastructure/ETicaretAPI.Infrastructure/ETicaretAPI.Infrastructure.csproj
+++ b/Infrastructure/ETicaretAPI.Infrastructure/ETicaretAPI.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
